@@ -1,5 +1,10 @@
 2008-02-07  Dan Williams  <dcbw@redhat.com>
 
+	* src/applet.c
+		- (nma_edit_connections_cb): spawn connection editor
+
+2008-02-07  Dan Williams  <dcbw@redhat.com>
+
 	* src/connection-editor/nm-connection-list.c
 	  src/connection-editor/nm-connection-list.h
 		- Add an icon column to the list view showing what connection type each
